@@ -1,27 +1,27 @@
 <p>This installer can install the game either in normal or root user mode,
-depending on how you launched the installer.
+depending on how you launched the installer.</p>
 
 <p><dfn>Normal user mode</dfn> means the game is installed in a directory to which the
 user who installed it has access. This is often somewhere under the home
 directory but may be for example on some sort of removable media, such as a USB
 stick. The game can only be played by the installing user (and others with read
-access to the installation directory).
+access to the installation directory).</p>
 
 <p><dfn>Root user mode</dfn> means the game is installed in a fixed, central location. All
-users of the system can play the game. Only root can install in this mode.
+users of the system can play the game. Only root can install in this mode.</p>
 
 <hr />
 
-<p>Installation will be done in <em>%MODE% user mode</em>.
+<p>Installation will be done in <em>%MODE% user mode</em>.</p>
 
-<p>The game files will be installed in
+<p>The game files will be installed in</p>
 
-<pre>  %INSTALLDIR%/%INSTALLSUFFIX%
+<pre>  %INSTALLDIR%/%INSTALLSUFFIX%</pre>
 
-<p>With a launcher, <em>%LAUNCHER%</em>, in
+<p>With a launcher, <em>%LAUNCHER%</em>, in</p>
 
-<pre>  %LAUNCHDIR%
+<pre>  %LAUNCHDIR%</pre>
 
-<p>There will also be a menu entry placed in
+<p>There will also be a menu entry placed in</p>
 
-<pre>  %MENUDIR%
+<pre>  %MENUDIR%</pre>
